--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Hero Header: Level Up your CSS Animation</title>
+    <title>Hero Header</title>
     <!-- The default layout, resets and and text styling -->
     <link href="stylesheets/main.css" rel="stylesheet">
     <!-- Custom styling for the header -->
